<resources>
    <string name="app_name">% Calculator</string>
    <string name="percentage_calculator">% Calculator</string>
    <string name="BANNER_TEST_AD_UNIT_ID">ca-app-pub-3940256099942544/6300978111</string>
    <string name="BANNER_AD_UNIT_ID">ca-app-pub-1719443042342371/9659771513</string>
    <string name="REWARDED_AD_UNIT_ID">ca-app-pub-1719443042342371/5835435201</string>
    <string name="INTERSTITIAL_AD_UNIT_ID">ca-app-pub-1719443042342371/7695299442</string>
    <string name="student_percentage">Student\nPercentage</string>
    <string name="discount_percentage">Discount\nPercentage</string>
    <string name="initial_value">Initial value</string>
    <string name="discount_value">Discount value</string>
    <string name="value_after_discount">Value after discount</string>
    <string name="scored_marks">Scored Marks</string>
    <string name="out_of_marks">Out of Marks</string>
    <string name="total_percentage">Total Percentage Scored (&#x25;)</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="share">Share</string>
    <string name="rupee_symbol">&#8377;</string>
    <string name="percent_symbol">&#x25;</string>
    <string name="_00_00">00.00 &#x25;</string>
    <string name="_00_00_">00.00 &#8377;</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="contact_us">Contact Us</string>
    <string name="arrow_point">&#8594;</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="change_language">Change Language</string>
    <string-array name="contact_us">
        <item>Email: vimalku637@gmail.com</item>
    </string-array>
    <string name="choose_your_preferred_language">Choose your preferred language</string>
    <string name="english">English [en]</string>
    <string name="hindi">हिंदी [hi]</string>
    <string name="get_in_touch">Get in Touch</string>
    <string name="_ok">OK</string>
    <string name="please_enter_scored_marks">Please enter scored marks!</string>
    <string name="please_enter_out_of_marks">Please enter out of marks!</string>
    <string name="about_me">About Me</string>
    <string name="p_r_o_f_i_l_e">PROFILE</string>
    <string name="vimal_kumar">Vimal Kumar</string>
    <string name="about_me_description">Hi, I developing android application using Java and Kotlin. I love coding and also I always try to adopts the new technology as soon as possible.</string>
    <string name="contact_me">Contact Me</string>
    <string name="email">vimalku637@gmail.com</string>
    <string name="age_calculator">Age\nCalculator</string>
    <string name="bmi_calculator">BMI\nCalculator</string>
    <string name="date_of_birthday">Date of Birthday</string>
    <string name="today_date">Today Date</string>
    <string name="age">Age</string>
    <string name="next_birthday">Next Birthday</string>
    <string name="summary">Summary</string>
    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="weeks">Weeks</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="weight_in_kilograms">Weight (in Kilograms)</string>
    <string name="height_in_centimeters">Height (in Centimeters)</string>
    <string name="bmi">BMI</string>
    <string name="_00_00__">00.00</string>
    <string name="information">Information</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="_16_0">16.0</string>
    <string name="_18_5">18.5</string>
    <string name="_25_0">25.0</string>
    <string name="_40_0">40.0</string>
    <string name="_0_years_0_months_0_days">0 years | 0 months | 0 days</string>
    <string name="get_more_with_the_new_update">Get more with the new update</string>
    <string name="we_ve_enhanced_the_app_and_added_some_new_and_exciting_feature">We\'ve enhanced the app, and added some new and exciting feature!</string>
    <string name="install_now">Install Now</string>
    <string name="later">Later</string>
    <string name="change_app_font">Change App Font</string>
    <string name="default_notification_channel_id" translatable="false">my_channel_id</string>
    <string name="settings">Settings</string>
    <string name="change_theme">Change Theme</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>