<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/themes"
        android:title="@string/enable_dark_mode"
        android:icon="@drawable/ic_baseline_brightness_3_24"
        />
    <item android:id="@+id/change_language"
        android:title="@string/change_language"
        android:icon="@drawable/ic_baseline_language_24"
        />
    <item android:id="@+id/change_font"
        android:title="@string/change_app_font"
        android:icon="@drawable/ic_baseline_language_24"
        android:visible="false"
        />
    <item android:id="@+id/share_app"
        android:title="@string/share_app"
        android:icon="@drawable/ic_baseline_share_24"
        />
    <item android:id="@+id/rate_app"
        android:title="@string/rate_app"
        android:icon="@drawable/ic_baseline_star_rate_24"
        />
    <item android:id="@+id/contact_us"
        android:title="@string/contact_us"
        android:icon="@drawable/ic_baseline_contact_mail_24"
        />
    <item android:id="@+id/about_me"
        android:title="@string/about_me"
        android:icon="@drawable/ic_baseline_contact_mail_24"
        />
</menu>