<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.bmi_calculator.BmiCalculator">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilWeight"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_5sdp"
                    android:hint="@string/weight_in_kilograms"
                    android:inputType="numberDecimal"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilHeight"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilWeight"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_5sdp"
                    android:hint="@string/height_in_centimeters"
                    android:inputType="numberDecimal"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvBMI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingHorizontal="@dimen/_8sdp"
                android:text="@string/bmi"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="@dimen/_20ssp"
                android:textStyle="normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilHeight"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvBMICalculation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingHorizontal="@dimen/_8sdp"
                android:text="@string/_00_00__"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="@dimen/_22ssp"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mtvBMI"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingHorizontal="@dimen/_8sdp"
                android:text="@string/information"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="@dimen/_18ssp"
                android:textStyle="normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mtvBMICalculation"
                />
            <RelativeLayout
                android:id="@+id/rlMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mtvInformation">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvUnderweight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:text="@string/underweight"
                    android:background="@color/color_blue_google"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_12ssp"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:text="@string/normal"
                    android:background="@color/color_green_google"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_12ssp"
                    android:layout_toRightOf="@+id/mtvUnderweight"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvOverweight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:text="@string/overweight"
                    android:background="@color/color_red_google"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_12ssp"
                    android:layout_toRightOf="@+id/mtvNormal"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlMain2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rlMain">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvUnderweightRange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:text="@string/_16_0"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_12ssp"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvNormalStartRange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:text="@string/_18_5"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_12ssp"
                    android:layout_toRightOf="@+id/mtvUnderweightRange"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvNormalEndRange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:text="@string/_25_0"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_12ssp"
                    android:layout_toRightOf="@+id/mtvNormalStartRange"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvOverweightEndRange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:text="@string/_40_0"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_12ssp"
                    android:layout_toRightOf="@+id/mtvNormalEndRange"
                    />

            </RelativeLayout>

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/BANNER_AD_UNIT_ID"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rlMain2"
                android:layout_marginHorizontal="@dimen/_10sdp"
                >
            </com.google.android.gms.ads.AdView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbClear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_15sdp"
        android:paddingBottom="@dimen/_15sdp"
        android:text="@string/clear"
        android:textAllCaps="false"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mbShare"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbShare"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_15sdp"
        android:paddingBottom="@dimen/_15sdp"
        android:text="@string/share"
        android:textAllCaps="false"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mbClear"
        android:layout_marginStart="@dimen/_2sdp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>