<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivAppIcon"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:src="@drawable/app_icon"
            android:background="@drawable/bg_for_icons"
            android:padding="@dimen/_10sdp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvGetNewUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toEndOf="@+id/ivAppIcon"
            android:text="@string/get_more_with_the_new_update"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/we_ve_enhanced_the_app_and_added_some_new_and_exciting_feature"
            android:textStyle="normal"
            android:textSize="@dimen/_12ssp"
            android:layout_toEndOf="@+id/ivAppIcon"
            android:layout_below="@+id/tvGetNewUpdate"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLater"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/later"
            android:textColor="@color/white"
            android:textAllCaps="true"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnInstallNow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:text="@string/install_now"
            android:textColor="@color/white"
            android:textAllCaps="true"
            />
    </LinearLayout>

</LinearLayout>
</layout>