<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:id="@+id/mMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/_5sdp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_language_change_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_your_preferred_language"
                android:textSize="@dimen/_14ssp"
                android:singleLine="true"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                />

            <RadioGroup
                android:id="@+id/rg_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                >

                <RadioButton
                    android:id="@+id/rb_english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:textColor="?android:attr/textColorPrimary"
                    android:checked="true"
                    />
                <RadioButton
                    android:id="@+id/rb_hindi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hindi"
                    android:textColor="?android:attr/textColorPrimary"
                    android:layout_marginTop="@dimen/_5sdp"
                    />

            </RadioGroup>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
</layout>